# NNINSP

./: .gitignore
EfficientNet/: dataset.py  model.py  plating_defect_detection.py  requirements.txt  train_plating_detector.py
EfficientNet/EffB0/: plating_defect_detection.py  train_plating_detector.py
Native/: CMakeLists.txt  README.md  compile_model.py  convert_model.py  convert_to_mlmodel.py  convert_to_onnx.py  mlmodelTest.py  requirements.txt  test_model.swift
Native/include/: coreml_engine.h  coreml_objc_engine.h  image_processor.h  inference_engine.h  model_info.h  tensorrt_engine.h
Native/src/: coreml_engine.cpp  coreml_engine.mm  coreml_engine_factory.mm  image_processor.cpp  inference_engine.cpp  main.cpp  model_info.cpp  tensorrt_engine.cpp
PatchCore/: requirements.txt  surface_inspection.py  train.py
